Bug #84415 slave don't report Seconds_Behind_Master when running slave_parallel_workers > 0

The fix: When a task is assigned to a slave’s jobs list its timestamp is
added to min-heap (std::set) master_timestamps. Then the “youngest”
timestamp from master_timestamps is assigned to last_master_timestamp
and thus based on it Second_Behind_Master gets calculated. This approach
makes sure that all timestamps from currently running workers are
considered when calculating Seconds_Behind_Master. When a job leaves the
slave’s queue its timestamp gets removed from master_timestamps.