sql/log_event.cc
@@ -2990,7 +2990,6 @@ Slave_worker *Log_event::get_slave_worker(Relay_log_info *rli)
       ret_worker->checkpoint_notified= TRUE;
     }
     ptr_group->checkpoint_seqno= rli->checkpoint_seqno;
-    ptr_group->ts= when.tv_sec + (time_t) exec_time; // Seconds_behind_master related
     rli->checkpoint_seqno++;
     /*
       Coordinator should not use the main memroot however its not
@@ -6984,9 +6983,7 @@ int Rotate_log_event::do_update_pos(Relay_log_info *rli)
     thd->backup_binlog_lock.release_protection(thd);
 
     if (rli->is_parallel_exec())
-      rli->reset_notified_checkpoint(0,
-                                     server_id ? when.tv_sec + (time_t) exec_time : 0,
-                                     true/*need_data_lock=true*/);
+      rli->reset_notified_checkpoint(0,true/*need_data_lock=true*/);
 
     /*
       Reset thd->variables.option_bits and sql_mode etc, because this could be the signal of
